misc fixing